--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -59,7 +59,7 @@
 <div class="container py-4">
     <div class="row align-items-center mb-4">
         <div class="col">
-            <h1 class="h3">Welcome, {{ request.user.username }}!</h1>
+            <h1 class="h3">Welcome, {{ user_display_name }}!</h1>
             <p class="text-muted">Here's an overview of your sentiment analysis system.</p>
         </div>
         <div class="col-auto">
