--- a/templates/users/marketer_dashboard.html
+++ b/templates/users/marketer_dashboard.html
@@ -73,7 +73,7 @@
                 <img src="{% static 'images/default-profile.png' %}" alt="Default Profile" class="profile-picture">
             {% endif %}
             <div>
-                <h2 class="mb-1">Welcome, {{ user.get_full_name|default:user.username }}</h2>
+                <h2 class="mb-1">Welcome, {{ user_display_name }}</h2>
                 <p class="text-muted mb-0">Role: {{ user.userprofile.get_role_display }}</p>
             </div>
         </div>
